2011-05-26  Miklos Szeredi <miklos@szeredi.hu>

	* Remove -lrt -ldl from fuse.pc for dynamic linking since
	libfuse.so is already linked with these libraries.  Reported by:
	Nikolaus Rath

2011-05-20  Miklos Szeredi <miklos@szeredi.hu>

	* Cleaner build output.  Patch by Reuben Hawkins

2011-05-19  Miklos Szeredi <miklos@szeredi.hu>

	* Disable splice by default, add "splice_read", "splice_write" and
	"splice_move" options.  Keep the "no_splice_*" variants, which can
	disable splice even if the filesystem explicitly enables it.

2011-04-15  Max Krasnyansky <maxk@kernel.org>
	* Added support for "auto_unmount" option which unmounts the
	filesystem automatically on process exit (or crash).

2011-03-30  Miklos Szeredi <miklos@szeredi.hu>

	* Patches by Laszlo Papp fixing various issues found by the
	Coverity checker

2011-03-11  Miklos Szeredi <miklos@szeredi.hu>

	* In case of failure to add to /etc/mtab don't umount.  Reported
	by Marc Deslauriers

2011-02-02  Miklos Szeredi <miklos@szeredi.hu>

	* libfuse: In fuse_session_loop_mt() don't pause when exiting the
	worker threads.  The pause() was added in 2.2.1 to prevent
	segfault on pthread_cancel() on an exited, detached thread.  Now
	worker threads are not detached and pthread_cancel() should work
	fine even after the thread exited.  Reported by Boris Protopopov

2011-01-31  Miklos Szeredi <miklos@szeredi.hu>

	* fusermount: chdir to / before performing mount/umount

	* fusermount: only allow mount and umount if util-linux supports
	--no-canonicalize

2010-12-16  Miklos Szeredi <miklos@szeredi.hu>

	* Highlevel lib: allow hash tables to shrink

	* Highlevel lib: add slab allocation for node cache.  This will
	allow the memory used by the filesystem to grow and shrink
	depending on how many inodes are currently cached.

2010-12-13  Miklos Szeredi <miklos@szeredi.hu>

	* Highlevel lib: use dynamically resized hash table for looking up
	by name and node ID.

2010-12-07  Miklos Szeredi <miklos@szeredi.hu>
